[package]
name = "windowed-tictactoe"
version = "0.1.0"
authors = ["samuel-weinstein-cs <raeweinst@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

pixels = "0.2.0"
winit = "0.22.0"
winit_input_helper = "0.6.0"
env_logger = "0.7.1"
log = "0.4.8"
